--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ version '1.0-SNAPSHOT'
 
 buildscript {
     repositories {
-        maven { url "http://oss.jfrog.org/artifactory/repo" }
+        maven { url "https://plugins.gradle.org/m2/" }
         jcenter()
     }
     dependencies {
@@ -12,7 +12,21 @@ buildscript {
 }
 
 apply plugin: "io.ratpack.ratpack-groovy"
+
 apply plugin: "idea"
+idea {
+    project {
+        jdkName "1.8"
+        languageLevel "1.8"
+        ipr {
+            withXml { provider ->
+                def node = provider.asNode()
+                //configure git support for the project in idea
+                node.component.find { it.'@name' == 'VcsDirectoryMappings' }?.mapping[0].'@vcs' = 'Git'
+            }
+        }
+    }
+}
 
 repositories {
     jcenter()
