Add slf4j back to gradle.

--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     compile ratpack.dependency("rx")
     compile ratpack.dependency("hystrix")
     compile ratpack.dependency("pac4j")
+    compile 'org.slf4j:slf4j-simple:1.7.7'
 }
 
 run {
