--- a/src/ratpack/application.properties
+++ b/src/ratpack/application.properties
@@ -1,4 +1,11 @@
-testCasesLocation=/root/TestCases/
-testCaseSample=/root/Repository/robotframework-test-plan/google-search-test-case/
-variable=/root/Repository/robotframework-test-plan/google-search-test-case/variables.txt
-robotframework=/root/Repository/robotframework-httplibrary/bin/robotframework
+app.testCasesLocation=/root/TestCases/
+app.testCaseSample=/root/Repository/robotframework-test-plan/google-search-test-case/
+app.variable=/root/Repository/robotframework-test-plan/google-search-test-case/variables.txt
+app.robotframework=/root/Repository/robotframework-httplibrary/bin/robotframework
+
+#app.testCasesLocation=/Users/jimin/Downloads/TestCases
+#app.testCaseSample=/Users/jimin/Repository/Bitbucket/robotframework-test-plan/google-search-test\
+#  -case
+#app.variable=/Users/jimin/Repository/Bitbucket/robotframework-test-plan/google-search-test-case\
+#  /variables.txt
+#app.robotframework=/Users/jimin/Repository/Bitbucket/robotframework-httplibrary/bin/robotframework
